k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: parking-vigo
  name: parking-vigo-deployment
  labels:
    app: parking-vigo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-vigo
  template:
    metadata:
      labels:
        app: parking-vigo
    spec:
      containers:
        - name: parking-vigo-frontend
          image: ghcr.io/rexwithluv/parking-vigo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: '64Mi'
              cpu: '50m'
            limits:
              memory: '128Mi'
              cpu: '100m'
