k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: parking-vigo
  name: parking-vigo-service
spec:
  selector:
    app: parking-vigo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
