k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: parking-vigo
  name: parking-vigo-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: parking-vigo-parking-vigo-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: 'rexwithluv.dev'
      http:
        paths:
          - pathType: Prefix
            path: /parking-vigo
            backend:
              service:
                name: parking-vigo-service
                port:
                  number: 80
    - host: 'www.rexwithluv.dev'
      http:
        paths:
          - pathType: Prefix
            path: /parking-vigo
            backend:
              service:
                name: parking-vigo-service
                port:
                  number: 80
  tls:
    - hosts:
        - 'rexwithluv.dev'
        - 'www.rexwithluv.dev'
      secretName: rexwithluv-tls
